# Comskip

./: CMakeLists.txt
inc/: DDRAW.H  Settings.h  comskip.h  config.h  mpeg2dec.h  platform.h  vo.h  win32_pthread.h
inc/ccextratorwin/: 608.h  ccextractor.h
src/: Settings.c  comskip.c  ffmpeg_dxva2.c  main.c  mpeg2dec.c  platform.c  video_out_dx.c  video_out_sdl.c  win32_pthread.c
src/ccextratorwin/: 608.c  ccextractor.c  encoding.c  general_loop.c  myth.c
